Funcionalidad en la actualización de credenciales

--- a/HiveGameClient/HiveGameWPFApp/Views/EditCredentialsView.xaml
+++ b/HiveGameClient/HiveGameWPFApp/Views/EditCredentialsView.xaml
@@ -15,10 +15,10 @@
                         <ImageBrush ImageSource="/Images/Background/MainMenuBackground.png" Stretch="UniformToFill" />
                     </Border.Background>
                 </Border>
-                <Label x:Name="lbl_ErrorMessage" Content="El código es incorrecto, ingrésalo de nuevo."
+                <Label x:Name="lbl_ErrorMessage" Content="{x:Static p:Resources.lbl_WrondVerificationCode}"
                         Foreground="Red" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,250,0,0" Visibility="Collapsed"/>
 
-                <Label x:Name="lbl_editProfile" Content="Edit Credentials"
+                <Label x:Name="lbl_editProfile" Content="{x:Static p:Resources.lbl_EditCredentials}"
                     Foreground="#e6a500"
                     FontFamily="Impact"
                     FontSize="60"
@@ -26,9 +26,9 @@
                     Margin="0,10,0,0" 
                     VerticalAlignment="Top"/>
 
-                <Grid x:Name="PanelOne" Visibility="Visible">
+                <Grid x:Name="grd_VerificationPanel" Visibility="Visible">
 
-                    <Label Content="Ingrega el código que enviamos"
+                    <Label x:Name="lbl_CodeSendMessage" Content="{x:Static p:Resources.lbl_CodeSendMessage}"
                        Foreground="White" 
                        FontFamily="Impact" 
                        FontSize="35"
@@ -36,7 +36,7 @@
                        VerticalAlignment="Top"
                        Margin="0,122,0,0"/>
 
-                    <Label Content="A TU CORREO"
+                    <Label Name="lbl_UserEmail" Content="{x:Static p:Resources.globalLbl_Email}"
                        Foreground="White" 
                        FontFamily="Arial" 
                        FontSize="23"
@@ -44,50 +44,50 @@
                        VerticalAlignment="Top"
                        Margin="420,173,0,0"/>
 
-                    <Label x:Name="lbl_Nickname" Content="Cumplidonegrete14@gmail.com"
+                    <Label x:Name="lbl_Email" Content="example@gmai.com"
                         Foreground="#FFC300"
                         FontStyle="Italic"
                         FontSize="20"
                         HorizontalAlignment="Left" 
-                        Margin="588,171,0,0" 
+                        Margin="518,175,0,0" 
                         VerticalAlignment="Top"/>
 
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center" Height="124" Width="511" Margin="407,0,0,0">
-                        <Border Width="70" Height="70" CornerRadius="70" BorderBrush="White" BorderThickness="2" Margin="5" x:Name="border1">
+                    <StackPanel Name="stckp_Bubbles" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center" Height="124" Width="511" Margin="407,0,0,0">
+                        <Border Width="70" Height="70" CornerRadius="70" BorderBrush="White" BorderThickness="2" Margin="5" x:Name="brd_BubbleOne">
                             <TextBox Width="40" Height="40" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
                                  MaxLength="1" FontSize="30" Background="Transparent" Foreground="White" BorderThickness="0"
                                  TextChanged="TextBox_TextChanged" GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus"/>
                         </Border>
-                        <Border Width="70" Height="70" CornerRadius="70" BorderBrush="White" BorderThickness="2" Margin="5" x:Name="border2">
-                            <TextBox Width="40" Height="40" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
-                                 MaxLength="1" FontSize="30" Background="Transparent" Foreground="White" BorderThickness="0"
-                                 TextChanged="TextBox_TextChanged" GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus"/>
-                        </Border>
-
-                        <Border Width="70" Height="70" CornerRadius="70" BorderBrush="White" BorderThickness="2" Margin="5" x:Name="border3">
-                            <TextBox Width="40" Height="40" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
-                                 MaxLength="1" FontSize="30" Background="Transparent" Foreground="White" BorderThickness="0"
-                                 TextChanged="TextBox_TextChanged" GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus"/>
-                        </Border>
-                        <Border Width="70" Height="70" CornerRadius="70" BorderBrush="White" BorderThickness="2" Margin="5" x:Name="border4">
+                        <Border Width="70" Height="70" CornerRadius="70" BorderBrush="White" BorderThickness="2" Margin="5" x:Name="brd_BubbleTwo">
                             <TextBox Width="40" Height="40" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
                                  MaxLength="1" FontSize="30" Background="Transparent" Foreground="White" BorderThickness="0"
                                  TextChanged="TextBox_TextChanged" GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus"/>
                         </Border>
 
-                        <Border Width="70" Height="70" CornerRadius="70" BorderBrush="White" BorderThickness="2" Margin="5" x:Name="border5">
+                        <Border Width="70" Height="70" CornerRadius="70" BorderBrush="White" BorderThickness="2" Margin="5" x:Name="brd_BubbleThree">
                             <TextBox Width="40" Height="40" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
                                  MaxLength="1" FontSize="30" Background="Transparent" Foreground="White" BorderThickness="0"
                                  TextChanged="TextBox_TextChanged" GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus"/>
                         </Border>
-                        <Border Width="70" Height="70" CornerRadius="70" BorderBrush="White" BorderThickness="2" Margin="5" x:Name="border6">
+                        <Border Width="70" Height="70" CornerRadius="70" BorderBrush="White" BorderThickness="2" Margin="5" x:Name="brd_BubbleFour">
+                            <TextBox Width="40" Height="40" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
+                                 MaxLength="1" FontSize="30" Background="Transparent" Foreground="White" BorderThickness="0"
+                                 TextChanged="TextBox_TextChanged" GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus"/>
+                        </Border>
+
+                        <Border Width="70" Height="70" CornerRadius="70" BorderBrush="White" BorderThickness="2" Margin="5" x:Name="brd_BubbleFive">
+                            <TextBox Width="40" Height="40" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
+                                 MaxLength="1" FontSize="30" Background="Transparent" Foreground="White" BorderThickness="0"
+                                 TextChanged="TextBox_TextChanged" GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus"/>
+                        </Border>
+                        <Border Width="70" Height="70" CornerRadius="70" BorderBrush="White" BorderThickness="2" Margin="5" x:Name="brd_BubbleSix">
                             <TextBox Width="40" Height="40" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
                                  MaxLength="1" FontSize="30" Background="Transparent" Foreground="White" BorderThickness="0"
                                  TextChanged="TextBox_TextChanged" GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus"/>
                         </Border>
                     </StackPanel>
 
-                    <TextBlock x:Name="txt_Timer" Text="Podrás solicitar un código nuevo en 60 segundos"
+                    <TextBlock x:Name="txt_Timer" Text="{x:Static p:Resources.txt_Timer}"
                            Foreground="Gray" 
                            FontWeight="Medium"
                            FontSize="25"
@@ -95,7 +95,7 @@
                            VerticalAlignment="Top" 
                            Margin="0,612,0,0"/>
 
-                    <TextBlock x:Name="txt_ResendLink" Text="¿No recibiste el código? "
+                    <TextBlock x:Name="txt_ResendLink" Text="{x:Static p:Resources.lbl_NoReceivedCode}"
                        Foreground="White" 
                        FontSize="20" 
                        HorizontalAlignment="Left" 
@@ -104,7 +104,7 @@
                        Visibility="Collapsed">
                     </TextBlock>
 
-                    <TextBlock  x:Name="txt_ResendCode_Click" Text="Reenviar Código"
+                    <TextBlock  x:Name="txt_ResendCodeClick" Text="{x:Static p:Resources.lbl_ResendCode}"
                        FontSize="20" Foreground="#FFD700"
                        HorizontalAlignment="Left" VerticalAlignment="Top"
                        Margin="665,487,0,0" TextDecorations="Underline"
@@ -119,9 +119,9 @@
 
                 </Grid>
 
-                <Grid x:Name="PanelTwo" Visibility="Collapsed">
+                <Grid x:Name="grd_EditionPanel" Visibility="Collapsed">
                     <StackPanel x:Name="NewPasswordSection" VerticalAlignment="Top" HorizontalAlignment="Center"  Margin="0,141,0,0" Width="574">
-                        <Label Content="Correo Electrónico:" Foreground="#FFC300" FontWeight="Bold" FontSize="25"/>
+                        <Label x:Name="lbl_EmailUpdate" Foreground="#FFC300" FontWeight="Bold" FontSize="25" Content="{x:Static p:Resources.globalLbl_Email}"/>
                         <TextBox x:Name="txt_Email"
                              Width="574"
                              Height="40"
@@ -136,9 +136,9 @@
                                 <DropShadowEffect Color="Black" ShadowDepth="3" Opacity="0.5" BlurRadius="10"/>
                             </TextBox.Effect>
                         </TextBox>
-                        <Label Content="Nueva Contraseña:" Foreground="#FFC300" FontWeight="Bold" FontSize="25"/>
-                        <Border x:Name="brPassword" CornerRadius="5" BorderBrush="#FFC300" BorderThickness="2" Height="40" Grid.Column="0"   >
-                            <PasswordBox x:Name="pwbPassword"
+                        <Label Name="lbl_NewPassword"  Content="{x:Static p:Resources.lbl_NewPassword}" Foreground="#FFC300" FontWeight="Bold" FontSize="25"/>
+                        <Border x:Name="brd_Password" CornerRadius="5" BorderBrush="#FFC300" BorderThickness="2" Height="40" Grid.Column="0"   >
+                            <PasswordBox x:Name="pwb_Password"
                                  FontSize="18"
                                  FontWeight="Medium"
                                  FontFamily="Segoe UI Variable Display"
@@ -151,8 +151,8 @@
                                 </PasswordBox.Effect>
                             </PasswordBox>
                         </Border>
-                        <Label Content="Confirmar Contraseña:" Foreground="#FFC300" FontWeight="Bold" FontSize="25"/>
-                        <Border x:Name="br_ConfirmPassword" CornerRadius="5" BorderBrush="#FFC300" BorderThickness="2" Height="40" Grid.Column="0"   >
+                        <Label Name="lbl_ConfirmPassword" Content="{x:Static p:Resources.lbl_ConfirmPassword}" Foreground="#FFC300" FontWeight="Bold" FontSize="25"/>
+                        <Border x:Name="brd_ConfirmPassword" CornerRadius="5" BorderBrush="#FFC300" BorderThickness="2" Height="40" Grid.Column="0"   >
                             <PasswordBox x:Name="pwb_ConfirmPassword"
                                  FontSize="18"
                                  FontWeight="Medium"
@@ -166,14 +166,14 @@
                                 </PasswordBox.Effect>
                             </PasswordBox>
                         </Border>
-                        <Button x:Name="btn_ConfirmChange" Content="Confirmar"
+                        <Button x:Name="btn_ConfirmChange" Content="{x:Static p:Resources.globalbtn_Confirm}"
                             Width="234" Height="36" FontSize="24"
                             Background="#FFC300" Foreground="Black"
                             HorizontalAlignment="Center"
                             Margin="0,120,250,0" RenderTransformOrigin="0.5,0.393" 
                             Click="BtnConfirmChanges_Click" Cursor=""/>
 
-                        <Button x:Name="btn_Cancel" Content="Cancelar"
+                        <Button x:Name="btn_Cancel" Content="{x:Static p:Resources.globalbtn_Cancel}"
                             Width="234" Height="36" FontSize="24"
                             Background="Gray" Foreground="Black"
                             HorizontalAlignment="Center"
